# digital_vigilance

./: Cargo.toml  README.md  bundle_mac.sh
resources/: Info.plist
resources/icons/: Digital-Vigilance.icns
src/: config_holder.rs  helpers.rs  main.rs  menu_builder.rs  mouse_handler.rs  popup_notification.rs  refresh_holder.rs
