[package]
name = "digital_vigilance"
version = "0.1.0"
edition = "2024"

[dependencies]
core-graphics = "0.25.0"
notify-rust = "4.11.7"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread", "time"] }
tray-item = "0.10.0"

[package.metadata.bundle]
name = "Digital-Vigilance"
identifier = "com.github.robson021.digital-vigilance"
icon = ["icons/contact-lens-eyes.png"]
